--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+== 1.2 released 2007-04-16 ==
+
+ * added tags URL support: http://flickr.com/<user>/tags/<tag>/
+
+== 1.1.3 released 2007-04-16 ==
+
+ * fixed bug in window.onload event
+
 == 1.1.2 released 2007-04-12 ==
 
  * improved inconsistent display in Windows IE
