--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,11 @@
+== 1.3 released 2007-09-02 ==
+
+ * added support for direct links to image URLs (jpg, gif, png)
+
+== 1.2.1 released 2007-09-02 ==
+
+ * fixed bug with non-English characters in Flickr tags
+
 == 1.2 released 2007-04-16 ==
 
  * added tags URL support: http://flickr.com/<user>/tags/<tag>/
