--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+== 1.3.1 released 2007-09-03
+
+ * fixed fatal typo that caused plugin not to work (except on my server, of course).  Sorry!
+ * same fix applied to 1.3 code
+
 == 1.3 released 2007-09-02 ==
 
  * added support for direct links to image URLs (jpg, gif, png)
