--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+== 1.4 released 2008-07-24
+
+ * fixed bug that broke FlickrTips when WordPress URL and Blog URL are different
+ * verified working with WordPress 2.6
+
 == 1.3.1 released 2007-09-03
 
  * fixed fatal typo that caused plugin not to work (except on my server, of course).  Sorry!
