--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+== 1.4.1 released 2008-07-24
+
+ * trying to get the version number to display right (instead of "devel") on the WordPress Plugins listing
+
 == 1.4 released 2008-07-24
 
  * fixed bug that broke FlickrTips when WordPress URL and Blog URL are different
