--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+== 1.5 released 2008-08-12
+
+ * new Flickr API connection code that doesn't depend on PHP allow_url_fopen setting
 
 == 1.4 released 2008-07-24
 
